--- a/css/styles.css
+++ b/css/styles.css
@@ -20,10 +20,11 @@ box-sizing: inherit;
   height: 100%;
   padding: 0;
   margin: 0;
-  font-family: "Arial", sans-serif;
+  font-family: "Roboto Condensed", "Arial", sans-serif;
   font-size: 16px;
+  font-weight: 400;
   line-height: 1.5;
-  background-color: white;
+  background-color: black;
   color: black;
 }
 
@@ -33,6 +34,10 @@ box-sizing: inherit;
   height: auto;
 }
 
+*:focus{
+  outline: 2px dashed #1e90ff;
+  outline-offset: 2px;
+}
 
 
 /* Container */
@@ -78,6 +83,7 @@ margin-right: auto;
   align-items: center;
   width: 100%;
   max-width: 600px;
+  padding: 24px;
   background-image: url(../img/left-bg.jpg);
   background-repeat: no-repeat;
   background-size: cover;
@@ -91,7 +97,9 @@ margin-right: auto;
 .hero-heading {
   margin-top: 0;
   margin-bottom: 24px;
+  font-family: "Bebas Neue", "Roboto condensed", "arial", sans-serif;
   font-size: 24px;
+  font-weight: 400;
   line-height: normal;
   letter-spacing: 2px;
   color: white;
@@ -100,11 +108,20 @@ margin-right: auto;
 
 .hero-link {
   display: inline-block;
+  font-family: "Bebas Neue", "Roboto condensed", "arial", sans-serif;
   background-color: #1e90ff;
   color: white;
   text-decoration: none;
   text-transform: uppercase;
   letter-spacing: 2px;
+}
+
+.hero-link:hover{
+  background-color: rgba(30, 144, 255, 0.8);
+}
+
+.hero-link:active{
+  background-color: rgba(30, 144, 255, 0.6) ;
 }
 
 .hero-link-inner {
@@ -116,12 +133,156 @@ margin-right: auto;
   width: 20px;
   height: 20px;
   background-image: url(../img/icon-star.svg)
-  content: ;
+  content: "";
 }
 
 
 
+/*Latest-videos*/
 
+.latest-videos{
+  width: 100%;
+  max-width: 600px;
+  padding: 54px;
+  background-color: white;
+}
+
+.latest-videos-heading{
+  margin-top: 0;
+  margin-bottom: 24px;
+  font-family: "Bebas Neue", "Roboto condensed", "arial", sans-serif;
+  font-size: 24px;
+  line-height: normal;
+  font-weight: 400;
+  letter-spacing: 2px ;
+  text-transform: uppercase;
+}
+
+.latest-videos-divider {
+  height: 1px;
+  border: 0;
+  margin-top: 24px;
+  margin-bottom: 24px;
+  background-color: #999;
+
+}
+
+
+.latest-videos-list{
+  padding: 0;
+  margin: 0;
+  margin-bottom: 24px;
+  list-style: none;
+}
+
+
+.latest-videos-item:not(:last-child){
+margin-bottom: 10px;
+}
+
+
+
+/* Item latest videos*/
+
+
+.item-latest-videos {
+  display: flex;
+
+}
+.item-latest-videos-img {
+  width: 160px;
+  height: auto;
+  border-radius: 4px;
+  object-fit: cover;
+}
+
+.item-latest-videos-info {
+padding: 16px;
+}
+
+.item-latest-videos-heading {
+  margin-top: 0;
+  margin-bottom: 4px;
+  font-family: "Bebas Neue", "Roboto condensed", "arial", sans-serif;
+  font-size: 18px;
+  font-weight: 400;
+  line-height: normal;
+  letter-spacing: 2px;
+}
+
+.item-latest-videos-link {
+  display: inline-block;
+  color: black;
+  text-decoration: none;
+}
+
+.item-latest-videos-link:hover{
+  color: #1e90ff;
+}
+
+.item-latest-videos-link:active{
+  opacity: 0.6;
+}
+
+.item-latest-videos-meta {
+  display: flex;
+  align-items: center;
+  color: #888;
+  font-size: 14px;
+  line-height: normal;
+}
+
+.item-latest-videos-meta-item {
+  display: flex;
+  align-items: center;
+}
+
+.item-latest-videos-meta-item:not(:last-child){
+  margin-right: 24px;
+}
+
+.item-latest-videos-meta-item::before{
+  width: 16px;
+  height: 16px;
+  margin-right: 4px;
+  background-repeat: no-repeat;
+  background-size: contain;
+  background-position: center center;
+  content: "";
+}
+
+.item-latest-videos-meta-item-published-at::before{
+  background-image: url("../img/icon-clock.svg");
+}
+
+.item-latest-videos-meta-item-views::before{
+  background-image: url("../img/visibility_black.svg");
+}
+
+
+/*Load more button*/
+
+.load-more-button{
+  display: block;
+  width: 100%;
+  padding: 12px;
+  border: 0;
+  border-radius: 4px;
+  font-size: 14px;
+  font-weight: 700;
+  line-height: normal;
+  background-color: #1e90ff;
+  color: white;
+  cursor: pointer;
+}
+
+.load-more-button:hover{
+  background-color: rgba(30, 144, 255, 0.8);
+}
+
+.load-more-button:active{
+  background-color: rgba(30, 144, 255, 0.6) ;
+}
 
 @media
 only screen and (-webkit-min-device-pixel-ratio: 2),
